# UE5Com

./: .gitignore  .gitmodules  README.md
MATLAB_Image_Processing/: README.md  build.bat  build.ps1  build_log.txt  build_mex_files.m  pyproject.toml  requirements.txt  run_build.m  run_image_processing_test.m  setup.bat  setup.ps1  setup_environment.ps1  setup_library.m  startup.m
MATLAB_Image_Processing/+Features/: ImageFeatureExtractor.m
MATLAB_Image_Processing/+Utils/: ImageDisplayer.m
MATLAB_Image_Processing/+ZMQ/: ZeroMQControlSender.m  ZeroMQImageReceiver.m
MATLAB_Image_Processing/c_src/: mex_zeromq_handler.cpp
MATLAB_Image_Processing/matlab_image_processing.egg-info/: PKG-INFO  SOURCES.txt
MATLAB_Image_Processing/mex/: mex_zeromq_handler.mexw64
MATLAB_Image_Processing/python_runtime/: python311._pth
PythonHub/: README.md  UE5ZeroMQHub.spec  display_image_receiver.py  gui_hub.py  pyproject.toml  requirements.txt  setup_environment.ps1  test_camera_control.py  zeromq_hub.py
PythonHub/python_runtime/: python311._pth
PythonHub/release/UE5ZeroMQHub/: config_zeromq.json
Python_Image_Processing/: README.md  build.ps1  displayer.py  feature_extractor.py  main.py  pyproject.toml  requirements.txt  setup_environment.ps1  zmq_handler.py
Python_Image_Processing/python_image_processing.egg-info/: PKG-INFO  SOURCES.txt
Simulink_Image_Processing/: Image_Processing_Test.slx  Image_Processing_Test.slx.autosave  README.md  build.bat  build.ps1  build_sfunctions.m  pyproject.toml  setup.bat  setup.ps1  setup_environment.ps1  sfun_zeromq_control.mexw64  sfun_zeromq_image.mexw64  slblocks.m  startup.m  zeromq_image_lib.slx
Simulink_Image_Processing/c_src/: sfun_zeromq_control.cpp  (+1 more)
UE5Com/: UE5Com.sln  UE5Com.uproject
ZeroMQCommunication/: PackagePlugin.ps1  README.md  ZeroMQCommunication.uplugin
(+55 files in other folders)
