[project]
name = "matlab-image-processing"
version = "0.1.0"
description = "Python environment for MATLAB Image Processing project."
requires-python = ">=3.11"
dependencies = [
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pillow==11.3.0",
    "pyzmq==27.0.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = []
